# py-apt

./: .editorconfig  .gitignore  README.md  db.py  main.py  pyproject.toml
apt/: __init__.py  util.py
apt/extract/: __init__.py  extract.py  json.py  multipart.py  path.py  query.py
apt/openapi/: __init__.py  openapi.py  schema.py  spec.py
apt/router/: __init__.py  endpoint.py  handler.py  handler_options.py  router.py
apt/sql/: __init__.py
apt/sql/query/: __init__.py
sqlx/: __init__.py  pyproject.toml
sqlx/result/: __init__.py
typings/apt/sql/: __init__.pyi
typings/sqlx/: __init__.pyi
