[project]
name = "py-apt"
version = "0.1.0"
description = "Apt is some libraries fit for your needs"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Nathan Faucett", email = "nathanfaucett@gmail.com" }]
dependencies = ["aiohttp>=3.11.11", "msgspec>=0.19.0", "result>=0.17.0"]

[tool.mypy]
mypy_path = "typings"

[tool.uv.sources]
sqlx = { workspace = true }

[tool.uv.workspace]
members = ["sqlx"]
