[project]
name = "py-apt"
version = "0.1.0"
description = "Apt is some libraries fit for your needs"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Nathan Faucett", email = "nathanfaucett@gmail.com" }]
dependencies = [
    "aiohttp>=3.11.11",
    "aiohttp-cors>=0.8.0",
    "pydantic>=2.11.1",
    "result>=0.17.0",
]

[tool.uv.sources]
sqlx = { workspace = true }

[tool.uv.workspace]
members = ["sqlx"]
